Added google adsense code

--- a/Stop-Clock/public/index.html
+++ b/Stop-Clock/public/index.html
@@ -8,6 +8,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4602561238027932"
+     crossorigin="anonymous"></script>
     <title>Stop Clock</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   </head>
